# modular-arithmetic

./: Makefile  README.adoc  clockmath.ml  modular-arithmetic.install  modular-arithmetic.opam
src/: .merlin  mod_arith.ml
test/: .merlin  test.ml
