opam-version: "1.2"
name: "modular-arithmetic"
version: "0.1"
maintainer: "Raphael Sousa Santos <contact@raphaelss.com>"
authors: "Raphael Sousa Santos <contact@raphaelss.com>"
license: "MPL-2.0"
homepage: "https://github.com/sonologico/modular-arithmetic"
bug-reports: "https://github.com/sonologico/modular-arithmetic/issues"
dev-repo: "git+https://github.com/sonologico/modular-arithmetic.git"
build: [
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "modular-arithmetic"]
depends: [
  "ocamlfind" {build}
]
